--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ language: 'en-uk'
 words_per_minute: 200
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
-baseurl: "/blog"
+baseurl: /blog/
 
 # Website info
 title: Yifan Xu
