--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ baseurl: /blog/
 # Website info
 title: Yifan Xu
 description: AI Enthusiast | Software Engineer
+author: Yifan Xu
 cover: assets/images/1.jpg
 # logo: assets/images/blog-icon.png
 # logo_dark: assets/images/favicon.png
