update cover pic

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: /blog/
 title: Yifan Xu
 description: AI Enthusiast | Software Engineer
 author: Yifan Xu
-cover: assets/images/1.jpg
+cover: assets/images/test.jpg
 # logo: assets/images/blog-icon.png
 # logo_dark: assets/images/favicon.png
 # favicon: assets/images/favicon.png
